---
config:
  layout: elk
  theme: default
---
erDiagram
    direction LR
    Event {
        bigint id PK
        text name
        text location
        text description
        timestamptz created_at
        timestamptz updated_at
    }
    TicketCategory {
        bigint id PK
        text name
        bigint event_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    TicketSale {
        bigint id PK
        text name
        timestamptz sale_begin_at
        timestamptz sale_end_at
        bigint event_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    TicketPackage {
        bigint id PK
        int price
        bigint ticket_category_id FK
        bigint ticket_sale_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    TicketArea {
        bigint id PK
        area_type type
        bigint ticket_package_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    TicketSeat {
        bigint id PK
        bigint ticket_area_id PK, FK
        text seat_number
        seat_status status
        timestamptz created_at
        timestamptz updated_at
    }
    User {
        text external_user_id PK
    }
    Order {
        bigint id PK
        bigint ticket_area_id PK, FK
        order_status status
        text fail_reason
        bigint event_id FK
        bigint ticket_sale_id FK
        text external_user_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    OrderItem {
        bigint id PK
        bigint ticket_area_id PK, FK
        text customer_name
        text customer_email
        int price
        bigint order_id FK
        bigint ticket_category_id FK
        bigint ticket_seat_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    Invoice {
        bigint id PK
        bigint ticket_area_id PK, FK
        invoice_status status
        int amount
        text external_id
        bigint order_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    IssuedTicket {
        bigint id PK
        bigint ticket_area_id PK, FK
        text serial_number
        text holder_name
        text name
        text description
        bigint ticket_seat_id FK
        bigint order_id FK
        bigint order_item_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    
    Event ||--o{ TicketCategory : "has"
    Event ||--o{ TicketSale : "has"
    Event ||--o{ Order : "receives"
    User ||--o{ Order : "places"
    TicketSale ||--o{ TicketPackage : "contains"
    TicketCategory ||--o{ TicketPackage : "defines"
    TicketPackage ||--o{ TicketArea : "includes"
    TicketArea ||--o{ TicketSeat : "contains"
    Order ||--o{ OrderItem : "contains"
    Order ||--o{ Invoice : "generates"
    Order ||--o{ IssuedTicket : "produces"
    OrderItem }o--|| TicketSeat : "reserves"
    IssuedTicket }o--|| OrderItem : "issued_for"
    TicketCategory ||--o{ OrderItem : "categorizes"